...
                        <viewControllerLayoutGuide type="bottom" id="sWL-wA-Y21"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="2KM-l8-mW1">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter url or name of project" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ADw-gB-Ha4">
                                <rect key="frame" x="16" y="67" width="289" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="289" id="9bC-Wh-A7X"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go"/>
...
4. any other input - open url "http://qbixstaging.com/&lt;your input&gt;"</string>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yZ3-v1-QUs">
                                <rect key="frame" x="313" y="65" width="46" height="30"/>
                                <state key="normal" title="Open"/>
                                <connections>
                                    <action selector="openUrlInWebView:" destination="Gng-UI-xOv" eventType="touchUpInside" id="Puu-bO-iYn"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
